--- a/src/_assets/scss/inc/header.scss
+++ b/src/_assets/scss/inc/header.scss
@@ -1,5 +1,5 @@
 .header {
-	--button-size: clamp(2rem, 5vw, 2.5rem);
+	--button-size: clamp(2.2rem, 6vw, 2.5rem);
 	--icon-size: calc(var(--button-size) * 0.5);
 
 	display: flex;
