--- a/src/_assets/scss/inc/page.scss
+++ b/src/_assets/scss/inc/page.scss
@@ -1,8 +1,17 @@
 .page {
-	padding: var(--gap);
-	padding-block: var(--gap);
+	padding-inline: var(--gap);
+	margin-block: var(--gap) var(--gap-x2);
 	width: min(80ch, 100%);
 	margin-inline: auto;
+}
+.page main {
+	position: relative;
+}
+.page .repo-link {
+	position: absolute;
+	right: 0;
+	top: 0;
+	margin-top: 0.2em;
 }
 
 .text {
@@ -99,6 +108,7 @@
 .page_body h1:first-of-type {
 	font-size: var(--font-size-fluid-3);
 	margin-block-start: -0.1em;
+	margin-right: 100px;
 }
 
 /*
